<resources>
    <string name="app_name">WanAndroid</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>

    <!--iconfont字体图标-->
    <string name="tab_left">&#xe620; </string> <!--左对齐-->
    <string name="tab_right">&#xe618; </string> <!--右对齐-->
    <string name="ic_hot">&#xe66d; </string> <!--火-->
    <string name="ic_return">&#xe6e5; </string> <!--返回-->
    <string name="ic_share">&#xe66c; </string> <!--分享-->
    <string name="ic_search">&#xe6a8; </string> <!--搜索-->
    <string name="ic_collect_nor">&#xe63c; </string> <!--未收藏-->
    <string name="ic_collect_sel">&#xe63b; </string> <!--已收藏-->
    <string name="ic_about">&#xe7ca; </string> <!--关于-->
    <string name="ic_close">&#xe80b; </string> <!--关闭的叉-->
    <string name="ic_home">&#xe611; </string> <!--首页-->
    <string name="ic_type">&#xe654; </string> <!--分类-->
    <string name="ic_user">&#xe652; </string> <!--用户-->
    <string name="ic_more">&#xe62b; </string>
    <string name="logining">正在登陆...</string>
    <string name="home">主页</string>
    <string name="type">分类</string>
    <string name="user">我的</string>
    <string name="share">分享</string>
    <string name="copy_link">复制链接</string>
    <string name="open_by_browser">使用系统浏览器打开</string>
    <string name="copy_link_success">链接已复制</string>
    <string name="my_collect">我的收藏</string>
    <string name="about">关于</string>
    <string name="click_login">点击登录</string>
    <string name="exit_login">退出登录</string>
    <string name="no_login">未登录</string>
    <string name="hint_search">请输入关键字</string>
    <string name="no_data">暂无数据!</string> <!--更多-->

    <string name="about_content"><![CDATA[
        <h2>网站内容</h2>
        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>\t\t如果您有任何好的建议：</p>
            \t\t\t\t关于网站排版
            <br/>\t\t\t\t关于新增常用网址以及工具
            <br/>\t\t\t\t未来你希望增加的功能等
        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">https://github.com/hongyangAndroid/xueandroid</a> 项目中以issue的形式提出，我们将及时跟进。</p>
        <p>\t\t如果您希望长期关注本站，可以加入我们的QQ群：<b>591683946</b></p>
        <h2>源码位置</h2>
        <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/wisedeveloper/WanAndroid" target="_blank">GitHub</a>，在上面发起<a href="https://github.com/wisedeveloper/WanAndroid/issues" target="_blank">issue</a>或者提交<b>pull request</b>,欢迎star。</p>
    ]]></string>
    <string name="night_mode">夜间模式</string>
    <string name="day_mode">日间模式</string>
</resources>
