<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="100dp"
        android:background="@color/header_bg">
        <com.wisedeve.wanandroid.widget.RoundImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:type="circle"
            android:src="@mipmap/default_img"/>
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_normal_size"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_collect"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:text="@string/my_collect"/>
    <Button
        android:id="@+id/btn_about"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:text="@string/about"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:text="@string/click_login"/>
    <Button
        android:id="@+id/btn_night_mode"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:text="@string/night_mode"/>

</LinearLayout>