<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <include layout="@layout/header"></include>
    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        >
        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:orientation="vertical">
            <com.wisedeve.wanandroid.widget.IconFontTextView
                android:id="@+id/icon_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_home"
                android:textSize="42px"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/app_blue"
                />
            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/app_blue"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:orientation="vertical">
            <com.wisedeve.wanandroid.widget.IconFontTextView
                android:id="@+id/icon_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_type"
                android:textSize="42px"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/tab_nor_color"
                />
            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/tab_nor_color"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:orientation="vertical">
            <com.wisedeve.wanandroid.widget.IconFontTextView
                android:id="@+id/icon_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_user"
                android:textSize="42px"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/tab_nor_color"
                />
            <TextView
                android:id="@+id/tv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textColor="@color/tab_nor_color"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>